# Amrvis2

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  INSTALL.md  LICENSE  PLAN.md  README.md
.github/workflows/: ci.yml
cmake/: AmrvisSanitizers.cmake  AmrvisWarnings.cmake
docs/: building.md  derived-expression-parser-design.md  user-guide.md
include/amrvis/cache/: BlockKey.hpp  ByteLruCache.hpp  CacheMetrics.hpp
include/amrvis/core/: Geometry.hpp  Metadata.hpp  Request.hpp  Result.hpp  Statistics.hpp  StopToken.hpp
include/amrvis/expression/: Expression.hpp
include/amrvis/io/: FabCatalog.hpp  ParticleReader.hpp  PlotfileBlockReader.hpp  PlotfileDataset.hpp  PlotfileMetadataReader.hpp  StandaloneMetadataReader.hpp
include/amrvis/io/detail/: VisMfIndex.hpp
include/amrvis/query/: LineQuery.hpp  SliceQuery.hpp
include/amrvis/render2d/: Contours.hpp  ImageBuffer.hpp  ScalarRenderer.hpp
reference/: README.md  checksums.sha256  compatibility-evidence.md  manifest.toml
reference/environment/: kiryu-2026-07-16.txt  legacy-build-3d-kiryu-2026-07-16.md  legacy-build-kiryu-2026-07-16.md
reference/workflows/: README.md  legacy-2d-multilevel.md  legacy-3d-orthogonal.md  legacy-standalone-data.md
resources/: amrvis2.desktop  amrvis2.icns  user-guide.qrc
src/cache/: CMakeLists.txt  CacheMetrics.cpp
src/core/: CMakeLists.txt  Metadata.cpp  Request.cpp  Statistics.cpp
src/expression/: CMakeLists.txt  Expression.cpp
src/io/: CMakeLists.txt
src/io/plotfile/: FabCatalog.cpp  ParticleReader.cpp  PlotfileBlockReader.cpp  PlotfileDataset.cpp  PlotfileMetadataReader.cpp  StandaloneMetadataReader.cpp
src/qt/: AnimationPanel.cpp  CMakeLists.txt  CacheConfig.hpp  ColorBarWidget.cpp  ColorBarWidget.hpp  DatasetExtract.hpp  DatasetWindow.cpp  DatasetWindow.hpp  FabSelectorDock.cpp  FabSelectorDock.hpp  ImageView.cpp  ImageView.hpp  IsoWidget.cpp  IsoWidget.hpp  LinePlotWindow.cpp  LinePlotWindow.hpp  MainWindow.cpp  MainWindow.hpp  ScientificDoubleSpinBox.cpp  ScientificDoubleSpinBox.hpp  SetContoursDialog.cpp  SetContoursDialog.hpp  UserGuideDialog.cpp  UserGuideDialog.hpp  main.cpp
src/query/: CMakeLists.txt  LineQuery.cpp  SliceQuery.cpp
src/render2d/: CMakeLists.txt  Contours.cpp  ImageBuffer.cpp  ScalarRenderer.cpp
tests/: CMakeLists.txt  qt_smoke_driver.cmake
tests/data/plotfile_2d/: Header
tests/data/plotfile_2d/Level_0/: Cell_H
tests/data/plotfile_2d/Level_1/: Cell_H
tests/data/plotfile_3d/: Header
tests/data/plotfile_3d/Level_0/: Cell_H
tests/data/plotfile_nonuniform/: Header
tests/data/plotfile_nonuniform/Level_0/: Cell_H
tests/data/plotfile_nonuniform/Level_1/: Cell_H
tests/fixture_materializer/: main.cpp
tests/integration/: test_fab_catalog.cpp  test_line_query.cpp  test_particle_reader.cpp  test_plotfile_metadata.cpp  test_selective_block_read.cpp  test_single_precision_plotfile.cpp  test_slice_query.cpp
tests/unit/: test_byte_lru_cache.cpp  test_cache_config.cpp  test_contours.cpp  test_core_metadata.cpp  test_expression.cpp  test_geometry.cpp  test_image_view.cpp  test_line_plot_hover.cpp  test_scalar_renderer.cpp  test_scientific_double_spin_box.cpp  test_stop_token.cpp  test_user_guide_dialog.cpp  test_vismf_index.cpp
tools/dataset_inspect/: CMakeLists.txt  main.cpp
tools/line_repro/: CMakeLists.txt  main.cpp
tools/query_benchmark/: CMakeLists.txt  main.cpp
tools/reference_capture/: assemble_local_archive.sh  build_legacy.sh  capture_environment.sh  verify_archive.sh  verify_checksums.sh
